--- a/scss/main.scss
+++ b/scss/main.scss
@@ -202,7 +202,7 @@ main {
     .overlay {
       position: absolute;
       width: 100%;
-      height: 250px;
+      height: $project-img-height;
       background: $primary-color;
       color: white;
       z-index: 10;
@@ -225,7 +225,7 @@ main {
       cursor: pointer;
       border-radius: 5px;
       width: 100%;
-      height: 200px;
+      height: $project-img-height;
     }
 
     #calculator {
